--- a/H0.md
+++ b/H0.md
@@ -2,7 +2,7 @@
 
 ![h0_html](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/275d49a7-8756-4852-947f-eb957c3a7944)
 
-```
+```html
 <!doctype html>
 <html lang=en>
 	<head>
