--- a/H0.md
+++ b/H0.md
@@ -4,12 +4,11 @@
 
 ```html
 <!doctype html>
-<html lang=en>
+<html lang="en">
 	<head>
 		<title>HTML page</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width;
-		initial-scale=1"
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<h1>Hello!</h1>
@@ -23,7 +22,7 @@
 
 ![python](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/95addba5-da40-4a8f-ab16-5d8bb7e1ee98)
 
-```
+```python
 def calc(x, y):
     return x * y
 
