--- a/H1.md
+++ b/H1.md
@@ -9,7 +9,7 @@
 2. [Tee yksinkertainen taulu tietokantaan](#tee-yksinkertainen-taulu-tietokantaan)
 3. [Muokkaa tietokantaa Django Admin -weppiliittymällä](#muokkaa-tietokantaa-django-admin--weppiliittymällä)
 4. [Tee tauluun uusia kenttiä](#tee-tauluun-uusia-kenttiä)
-5. Vapaaehtoinen, vaikea: tee kaksi taulua/luokkaa ja niiden välille riippuvuus
+5. [Lähteet](#lähteet)
 
 ## Asenna Django-kehitysympäristö
 
