--- a/H1.md
+++ b/H1.md
@@ -17,7 +17,7 @@ Ennen asennuksia aloitetaan komennolla:
 
     sudo apt-get update
 
-Sitten asennetaan virtuaaliympäristö ja python3-pip paketinhallintamanageri.
+Asennetaan virtuaaliympäristö ja python3-pip paketinhallintamanageri.
 
     sudo apt-get -y install virtualenv python3-pip
 
@@ -46,6 +46,14 @@ Seuraavaksi voidaan tarkastaa, että paketit on asennettu virtuaaliympäristöö
     which pip
 
 KUVA1
+<details>
+
+<summary>Terminaali</summary>
+
+
+![1](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/366719fc-1d99-4f2f-9949-08c763f11262)
+
+</details>
 
 Luodaan microlla requirements tiedosto:
 
