--- a/H1.md
+++ b/H1.md
@@ -45,10 +45,10 @@ Seuraavaksi voidaan tarkastaa, että paketit on asennettu virtuaaliympäristöö
 
     which pip
 
-KUVA1
+
 <details>
 
-<summary>Terminaali</summary>
+<summary>Terminaalista kuva</summary>
 
 
 ![1](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/366719fc-1d99-4f2f-9949-08c763f11262)
@@ -75,7 +75,15 @@ Sekä sijainti:
 
     which django-admin
 
-KUVA2
+<details>
+
+<summary>Terminaalista kuva</summary>
+
+![2](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/481f2ea0-1aac-44c7-af26-57ce118d6d60)
+
+
+</details>
+
 
 Tehdään hyvän hakemistorakenteen mukaisesti public_sites-hakemisto komennolla:
 	
@@ -92,19 +100,48 @@ Luodaan sinne uusi projekti käyttäen komentoa:
 	cd alisaco
 	
 	ls
-KUVA3
+	
+<details>
+
+<summary>Terminaalista kuva</summary>
+
+![3](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/d587217c-f416-4078-8b75-5d0237c04006)
+
+
+</details>
+
 
 Katsotaan hakemistorakenne graafisemmin käyttäen treetä.
 
 	tree public_sites
 
-	kuva treestä KUVA4
+	
+<details>
+
+<summary>Kuva hakemistorakenteesta</summary>
+
+![4](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/11273e2f-45ed-4c6a-ac98-270e0cb3a010)
+
+
+</details>
 
 Pyöräytetään projekti käyntiin komennolla:
 	 
 	./manage.py runserver #NOT FOR PROD
 
 Selaimessa aukeaa djangon default-näkymä, kun avataan projektin URL ``http://127.0.0.1:8000/``
+
+<details>
+
+<summary>Kuvia käynnistyksestä</summary>
+
+![5](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/83825d19-83f6-4cbd-8529-d779105c257b)
+
+![6](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/964ba498-50be-491f-a048-e7af38eaf131)
+
+
+
+</details>
 
 
 ## Tee yksinkertainen taulu tietokantaan
@@ -121,7 +158,7 @@ Asennetaan salasanagenraattori komennolla:
 
 Generoidaan salasana komennolla:
 	
-	pwgen -s 20 1 			fZRiOybc8VLxh5dMVUSB
+	pwgen -s 20 1 			
 
 Luodaan superuser käyttäjä komennolla:
 
@@ -129,7 +166,16 @@ Luodaan superuser käyttäjä komennolla:
 
 Laitetaan käyttäjälle käyttäjänimi, sähköposti sekä generoitu salasana.
 
-KUVA7
+
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+![7](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/7058882e-2006-4a7b-9821-905fd9bc3224)
+
+
+
+</details>
 
 Mennään djangon tarjoamalle admin-sivulle lisäämällä URL:n perään /admin eli ``http://127.0.0.1:8000/admin``
 
@@ -137,8 +183,20 @@ Testataan toimivuus komennolla:
 
 	./manage.py runserver #NOT FOR PROD
 
-KUVA8
-KUVA9
+
+<details>
+
+<summary>Kuvia selaimen admin-näkymästä</summary>
+
+![8](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/ac25fcea-2119-42a7-9edc-06aa45ea15d4)
+
+
+![9](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/24954b13-52b7-4bae-ba8c-22c2931c72ca)
+
+
+</details>
+
+
 
 Avataan terminaaliin toinen välilehti, jossa sovellus pyörii samalla, kun jatkokehitetään sitä.
 
@@ -148,13 +206,31 @@ Aloitetaan luomalla uusi sovellus komennolla:
 
 Tämä teki uuden bms/ kansion (Book Management System) projektiani varten.
 
-KUVA10
+
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+![10](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/703977d1-63bd-493e-a6a2-ae8ab0bbb829)
+
+
+</details>
 
 Lisätään sovellus settings.py-tiedoston kohtaan INSTALLED_APPS komennolla:
 
 	    micro alisaco/settings.py
 
 KUVA11
+<details>
+
+<summary>Kuva INSTALLED_APPS</summary>
+
+
+![11](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/9ff09350-d101-4d2d-8171-456d9a4ecf41)
+
+
+</details>
+
 
 Lisätään sovellukseen luokka tietokantaa varten (ORM). Tämä tapahtuu muokkaamalla models.py-tiedostoa komennolla:
 
@@ -168,13 +244,33 @@ class Book(models.Model):
 
 ```
 
-KUVA12
+
+<details>
+
+<summary>Kuva models.py</summary>
+
+![12](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/07920bb2-c8ff-444c-9799-5a6b6e98c11e)
+
+
+
+</details>
+
 
 Päivitetään tietokanta komennoilla:
 
 	./manage.py makemigrations; ./manage.py migrate
 
-KUVA13
+
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+
+![13](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/ca589b3b-8575-4e7b-a633-524527d6c13f)
+
+
+</details>
+
 
 Muokataan admin-tiedostoa, jotta admin voi sitä hallita käyttäen komentoa:
 
@@ -187,16 +283,50 @@ from . import models
 admin.site.register(models.Book)
 
 ```
-KUVA 14
+
+
+<details>
+
+<summary>Kuva admin.py</summary>
+
+![14](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/8fc5781f-574b-4b78-8aa1-e12838dacb12)
+
+
+
+</details>
+
 
 Nyt uuden taulun pitäisi näkyä selaimessa.
 
-KUVA15
+
+<details>
+
+<summary>Kuva selaimesta</summary>
+
+![15](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/f342c671-f2c4-489a-9b48-3f2b77452338)
+
+
+
+</details>
+
 
 
 ## Muokkaa tietokantaa Django Admin -weppiliittymällä
 
 Nyt selaimessa voi lisätä kohteita tauluun.
+
+<details>
+
+<summary>Kuva selaimesta</summary>
+
+
+![16](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/a286145c-75e3-4293-9ff0-b92d3e29014c)
+
+
+![17](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/bf97efce-ea98-43fe-85ba-b935443f658c)
+
+</details>
+
 
 Muokataan näkymä informatiivisemmaksi käyttäjälle komennolla:
 
@@ -215,7 +345,29 @@ class Book(models.Model):
 
 ```
 
+<details>
+
+<summary>Kuva models.py</summary>
+
+![18](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/8506f886-20a4-43e9-9e7e-43696fd68b0d)
+
+
+
+</details>
+
+
 Päivitetään selain ja se näyttää nyt, jokaisen olion nimen.
+
+<details>
+
+<summary>Kuva selaimesta</summary>
+
+
+![19](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/cafa764c-6acd-4a43-bfe5-e888e373bb12)
+
+
+</details>
+
 
 ## Tee tauluun uusia kenttiä
 
@@ -233,19 +385,56 @@ class Book(models.Model):
 	return self.name
 ```
 
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+![20](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/6791e484-86ee-4f0d-9a9a-6ee11f01af87)
+
+
+
+</details>
+
 Ja selain näyttää tältä
 
-KUVA21
+<details>
+
+<summary>Kuva</summary>
+
+
+![21](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/ffc23273-b548-4768-9f16-f934cb29e598)
+
+
+</details>
+
 
 Vika on siinä, että unohdin tehdä muutokset myös tietokantaan eli komennot:
 
 	./manage.py makemigrations; ./manage.py migrate
 
-KUVA22
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+![22](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/15cdb608-4e05-4c7c-aeb1-9f29a0c8382c)
+
+
+
+</details>
+
 
 Nyt selaimessa näkyy muutokset:
 
-KUVA23
+<details>
+
+<summary>Kuva</summary>
+
+
+![23](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/3f1f4535-c652-4abd-a6fd-c49212bb9137)
+
+
+</details>
+
 
 Lisätään vielä näkyville kirjan status, jos se on valittu.
 
@@ -262,15 +451,34 @@ class Book(models.Model):
 
 ```
 
-KUVA24
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+	
+![24](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/da278e17-dc8a-4269-a1a0-d5a77b61f4b0)
+
+
+
+</details>
+
 
 Selaimessa näkymä muutoksen jälkeen:
 
-KUVA25
+<details>
+
+<summary>Kuva terminaalista</summary>
+
+
+![25](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/6d1b3080-5958-4daa-88be-c7f4a591d889)
+
+
+</details>
+
 
 > Lopetus 🕒 19.45
 > Aloitetaan raportin koostaminen 🕒 19.46
-> Raportin koostaminen loppuu 22.05.2023 🕒 2.09 ja lähteet merkitään.
+> Raportin koostaminen loppuu 22.05.2023 🕒 20.12 ja lähteet merkitään.
 
 
 ## Lähteet:
