--- a/H1.md
+++ b/H1.md
@@ -1,6 +1,6 @@
 ##### Alisa Ahokas
 
-# Hello Django [▪️](#▪️)
+# Hello Django ▪️
 
 ## Aloitetaan tehtävän tekeminen 22.05.2023 🕒 16.39 lukemalla [tehtävänanto](https://terokarvinen.com/2023/python-web-idea-to-production/) sekä [materiaalia](https://terokarvinen.com/2022/django-instant-crm-tutorial/?fromSearch=django%204).
 
@@ -11,7 +11,7 @@
 4. [Tee tauluun uusia kenttiä](#tee-tauluun-uusia-kenttiä)
 5. [Lähteet](#lähteet)
 
-## Asenna Django-kehitysympäristö ▪️
+## Asenna Django-kehitysympäristö 
 
 Ennen asennuksia aloitetaan komennolla:
 
@@ -144,7 +144,7 @@ Selaimessa aukeaa djangon default-näkymä, kun avataan projektin URL ``http://1
 </details>
 
 
-## Tee yksinkertainen taulu tietokantaan
+## Tee yksinkertainen taulu tietokantaan [▪️](#▪️)
 
 Päivitetään tietokanta komennoilla:
 
