--- a/H1.md
+++ b/H1.md
@@ -1,6 +1,7 @@
 ##### Alisa Ahokas
 
 # Hello Django
+<!-- Up -->
 
 ## Aloitetaan tehtävän tekeminen 22.05.2023 🕒 16.39 lukemalla [tehtävänanto](https://terokarvinen.com/2023/python-web-idea-to-production/) sekä [materiaalia](https://terokarvinen.com/2022/django-instant-crm-tutorial/?fromSearch=django%204).
 
@@ -12,6 +13,8 @@
 5. [Lähteet](#lähteet)
 
 ## Asenna Django-kehitysympäristö 
+[⬆️](#hello-django)
+[⬆️](#up)
 
 Ennen asennuksia aloitetaan komennolla:
 
@@ -145,7 +148,8 @@ Selaimessa aukeaa djangon default-näkymä, kun avataan projektin URL ``http://1
 
 
 ## Tee yksinkertainen taulu tietokantaan
-[🔝](#hello-django)
+[⬆️](#hello-django)
+[⬆️](#up)
 
 Päivitetään tietokanta komennoilla:
 
@@ -371,6 +375,7 @@ Päivitetään selain ja se näyttää nyt, jokaisen olion nimen.
 
 
 ## Tee tauluun uusia kenttiä
+[⬆️](#hello-django)
 
 Tehdään tauluun uusi kenttä, jossa on varattu, hyllyssä tai lainassa vaihtoehdot. 
 
@@ -483,6 +488,7 @@ Selaimessa näkymä muutoksen jälkeen:
 
 
 ## Lähteet:
+[⬆️](#hello-django)
 
 - [Tero Karvinen - Django 4 Instant Customer Database Tutorial](https://terokarvinen.com/2022/django-instant-crm-tutorial/). Luettu 22.05.2023.
 - Tero Karvinen luento 22.05.2023.
