--- a/H1.md
+++ b/H1.md
@@ -14,7 +14,7 @@
 
 ## Asenna Django-kehitysympäristö 
 [⬆️](#hello-django)
-[⬆️](#up)
+[ylös](#up)
 
 Ennen asennuksia aloitetaan komennolla:
 
@@ -149,7 +149,7 @@ Selaimessa aukeaa djangon default-näkymä, kun avataan projektin URL ``http://1
 
 ## Tee yksinkertainen taulu tietokantaan
 [⬆️](#hello-django)
-[⬆️](#up)
+[ylös](#up)
 
 Päivitetään tietokanta komennoilla:
 
