--- a/djangoh2/h2.md
+++ b/djangoh2/h2.md
@@ -1,1 +1,13 @@
+# Django-sovellus vaatteista
 
+### Sovellus listaa vaatteita
+
+- Käyttäjä voi admin-paneelissa lisätä vaatteita ja valita niille värin.
+- Väri näytetään, jos se on valittu, muuten palautetaan vain nimi.
+- Vaatteiden listaus -HTML perii Base.html:n sisältöä.
+- Lopuutuloksen näkee selaimesta
+
+![2_oikea](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/c9bd9852-12f1-4812-b71a-6f83ed8d424a)
+
+
+- Ohjelmaa en jatkokehittänyt vielä eteenpäin, koska virtuaalikoneen ja githubin yhdistämisessä meni niin kauan aikaa. Opettavainen kokemus kaikkinensa.
