--- a/djangoh2/h2.md
+++ b/djangoh2/h2.md
@@ -9,5 +9,5 @@
 
 ![2_oikea](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/c9bd9852-12f1-4812-b71a-6f83ed8d424a)
 
-
+- Koodi löytyy tästä reposta.
 - Ohjelmaa en jatkokehittänyt vielä eteenpäin, koska virtuaalikoneen ja githubin yhdistämisessä meni niin kauan aikaa. Opettavainen kokemus kaikkinensa.
