--- a/djangoh3/h3.md
+++ b/djangoh3/h3.md
@@ -1,8 +1,8 @@
 # Djangolla tehty CRUD-sovellus kulkuneuvoista
 
-### Sovellus listaa kulukneuvoja
+### Sovellus listaa kulkuneuvoja
 
-- Käyttäjä voi admin-paneelissa lisätä kulukneuvoja ja valita niille painon sekä kuvauksen.
+- Käyttäjä voi admin-paneelissa lisätä kulkuneuvoja ja valita niille painon sekä kuvauksen.
 - Nyt käyttäjä pystyy myös selaimessa HTML-sivujen avulla toteuttamaan samat toiminnot kuin admin-paneelissa.
 - Ohjelma listaa tietokannassa olevat kulkuneuvot.
 - Kulkuneuvon ominaisuuksia voi muokata ja muokkaukset voi tallentaa. Käyttäjä voi myös peruuttaa takaisin etusivulle, jos muokkaus-toimntoon meni vahingossa.
