--- a/djangoh3/h3.md
+++ b/djangoh3/h3.md
@@ -6,7 +6,7 @@
 - Nyt käyttäjä pystyy myös selaimessa HTML-sivujen avulla toteuttamaan samat toiminnot kuin admin-paneelissa.
 - Ohjelma listaa tietokannassa olevat kulkuneuvot.
 - Kulkuneuvon ominaisuuksia voi muokata ja muokkaukset voi tallentaa. Käyttäjä voi myös peruuttaa takaisin etusivulle, jos muokkaus-toimntoon meni vahingossa.
-- Käyttäjä voi poistaa tietokannasta valitun kulkuneuvoista tietoineen. Poistamiseen on oma vahvistus-sivu, josta voi peruuttaa etusivulle, jos kulukneuvon poistaminen ei ollut tarkoituksenmukaista.
+- Käyttäjä voi poistaa tietokannasta valitun kulkuneuvon tietoineen. Poistamiseen on oma vahvistus-sivu, josta voi peruuttaa etusivulle, jos kulukneuvon poistaminen ei ollut tarkoituksenmukaista.
 
 #### Etusivun listaus:
 
