--- a/djangoh3/h3.md
+++ b/djangoh3/h3.md
@@ -8,25 +8,25 @@
 - Kulkuneuvon ominaisuuksia voi muokata ja muokkaukset voi tallentaa. Käyttäjä voi myös peruuttaa takaisin etusivulle, jos muokkaus-toimntoon meni vahingossa.
 - Käyttäjä voi poistaa tietokannasta valitun kulkuneuvon tietoineen. Poistamiseen on oma vahvistus-sivu, josta voi peruuttaa etusivulle, jos kulukneuvon poistaminen ei ollut tarkoituksenmukaista.
 
-#### Etusivun listaus:
+### Etusivun listaus:
 
 ![1](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/389374b2-b1ed-45f2-ab56-46a861a5f9a0)
 
 
 
-#### Kulkuneuvon lisäämiseen lomake:
+### Kulkuneuvon lisäämiseen lomake:
 
 ![2](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/55e5c07d-ad65-420f-b25c-9df1902017c0)
 
 
 
-#### Lisätyn kulkuneuvon muokkaaminen:
+### Lisätyn kulkuneuvon muokkaaminen:
 
 ![3](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/d9fc0a85-ec61-49b0-9f6f-ed6b7c787d7c)
 
 
 
-#### Kulkuneuvon poistamisen vahvistaminen:
+### Kulkuneuvon poistamisen vahvistaminen:
 
 ![4](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/1d747e6b-2348-4ff2-ba48-987aea212ab5)
 
