--- a/djangoh4/public_sites/alisaco/h4.md
+++ b/djangoh4/public_sites/alisaco/h4.md
@@ -1,1 +1,51 @@
+# Djangolla tehty CRUD-sovellus urheiluvälineistä
+
+### Sovellus listaa urheiluvälineitä
+
+- Käyttäjä voi admin-paneelissa lisätä kulkuneuvoja ja valita niille valmistajan, hinnan ja kuvauksen.
+- Käyttäjä voi myös admin-paneelissa lisätä valmistajia.
+- Nyt käyttäjä pystyy myös selaimessa HTML-sivujen avulla toteuttamaan samat toiminnot kuin admin-paneelissa.
+- Ohjelma listaa tietokannassa olevat urheiluvälineet. Etusivulla näkyy myös luomis- sekä muokkaamisajat UTC+0 ajassa.
+- Välineen ominaisuuksia voi muokata ja muokkaukset voi tallentaa. Käyttäjä voi myös peruuttaa takaisin etusivulle, jos muokkaus-toimntoon meni vahingossa.
+- Käyttäjä voi poistaa tietokannasta valitun välineen tietoineen. Poistamiseen on oma vahvistus-sivu, josta voi peruuttaa etusivulle, jos välineen poistaminen ei ollut tarkoituksenmukaista.
+- Käyttäjän tulee ensin kirjautua sisään, jotta muokkauksia voi tehdä tai poistaa välineitä. Etusivukaan ei näy ilman kirjautumista.
+- Uloskirjautuminen ohjaa etusivulle takaisin sisäänkirjautumiseen.
+
+### Kirjautuminen:
+
+![1](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/96fa6cde-4c50-4153-a97e-a1623d3f8e3e)
+
+
+
+### Etusivun listaus:
+
+![2](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/0aed3d85-ec80-4b11-b8d2-bd499a99db6b)
+
+
+
+### Urheiluvälineen lisäämiseen lomake:
+
+![3](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/e9ff1ba1-ca12-49b5-b6b9-0848dbb8cca5)
+
+
+
+### Lisätyn urheiluvälineen muokkaaminen:
+
+![3](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/983c9a98-5489-43cd-8cd7-c05cf90d8758)
+
+
+
+### Urheiluvälineen poistamisen vahvistaminen:
+
+![5](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/66d8e898-0454-41e1-8f6e-d320f9d7a821)
+
+
+
+### Valmistajan lisääminen/muokkaaminen:
+
+![4](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/966e4ef5-5c1d-47d3-ae36-c4d302ae1af3)
+
+
+- Rekiteröityminen on seuraava vaihe toteuttaa.
+- Koodi löytyy reposta.
 
