--- a/djangoh4/public_sites/alisaco/h4.md
+++ b/djangoh4/public_sites/alisaco/h4.md
@@ -2,7 +2,7 @@
 
 ### Sovellus listaa urheiluvälineitä
 
-- Käyttäjä voi admin-paneelissa lisätä kulkuneuvoja ja valita niille valmistajan, hinnan ja kuvauksen.
+- Käyttäjä voi admin-paneelissa lisätä urheiluvälineitä ja valita niille valmistajan, hinnan ja kuvauksen.
 - Käyttäjä voi myös admin-paneelissa lisätä valmistajia.
 - Nyt käyttäjä pystyy myös selaimessa HTML-sivujen avulla toteuttamaan samat toiminnot kuin admin-paneelissa.
 - Ohjelma listaa tietokannassa olevat urheiluvälineet. Etusivulla näkyy myös luomis- sekä muokkaamisajat UTC+0 ajassa.
