--- a/djangoh7/h7.md
+++ b/djangoh7/h7.md
@@ -1,1 +1,50 @@
+##### Alisa Ahokas
+
+# Djangolla tehty CRUD-sovellus urheilusuorituksista päiväkirjamerkintöinä
+
+### Sovelluksessa käyttäjä voi listata urheilusuorituksiaan päiväkirjaan
+
+- Käyttäjä luo itselleen tilin ja kirjautuu sisään.
+- Käyttäjä voi lisätä omia treenejä päiväkirjaan, treenin keston minuutteina sekä vapaamuotoisen kuvauksen treenin kulusta tai vaikka fiiliksistä treeniin liittyen.
+- Sovellus listaa käyttäjän treenit näyttäen luontipäivän ja kellonajan (Suomen ajassa).
+- Käyttäjä ei pääse näkemään muiden käyttäjien merkintöjä.
+- Käyttäjät voivat tarkastella kaikkia sijainteja sekä niissä suoritettuja treenejä, mutta muiden käyttäjien treenien sisältöä ei näe.
+
+- Admin-paneelissa voi hallita, kuitenkin käyttäjätilejä sekä niiden sisältöä.
+
+
+### Etusivun listaus:
+
+
+![2](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/194e0cae-d9c9-4ef1-9d30-b1b5937968a6)
+
+
+
+### Treenin lisäämiseen lomake:
+
+
+![1](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/be88e889-77b3-4c82-be8c-b343c74b5e84)
+
+
+
+### Treenin poistamisen vahvistaminen:
+
+
+![3](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/149d2f26-f795-47aa-b9d9-dce2a2d682ea)
+
+### Sijainnin lisääminen:
+
+
+![4](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/36587cc3-3700-402b-93c9-b3294276c59d)
+
+
+### Sijaintien listaus:
+
+
+![5](https://github.com/Viktorialissa/Django-kurssi/assets/112398757/95c23d35-d305-46c2-add1-049be7454b10)
+
+
+
+- [Treenipäiväkirja](http://ahokasalisa.com/)
+- Koodi löytyy reposta.
 
